--- a/404/index.html
+++ b/404/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>404 - Sayfa Bulunamadı</title>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+<style>
+body{font-family:'Noto Sans',Arial,sans-serif;background:#36393f;color:#dcddde;margin:0;padding:20px;display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:100vh;text-align:center;box-sizing:border-box;overflow:hidden}.bg-container{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;background-image:url('https://cdn.discordapp.com/assets/content/d19dd056ce01e2fd5678d52153d444d35796e8314bde5aa536f10794c3e67f69.gif');background-repeat:repeat;opacity:.07}.container{background:rgba(47,49,54,.9);border:1px solid #202225;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,.2);padding:40px;width:90%;max-width:600px;box-sizing:border-box}h1{color:#f04747;font-size:3rem;margin:0 0 10px 0;font-weight:700;text-transform:uppercase}h2{color:#fff;font-size:1.5rem;margin:0 0 15px 0;font-weight:700}p{font-size:1rem;line-height:1.6;margin:0 0 20px 0}p.links{font-size:.9rem;color:#72767d}.links a{color:#00b0f4;text-decoration:none;font-weight:bold;margin:0 10px;transition:text-decoration .2s ease}.links a:hover{text-decoration:underline}@media (max-width:600px){.container{width:90%;padding:30px}h1{font-size:2.5rem}h2{font-size:1.2rem}}
+</style>
+</head>
+<body>
 
+<div class="bg-container"></div>
+
+<div class="container">
+  <h1>404 - sayfa yok</h1>
+  <h2>Yanlış yerde misin?</h2>
+  <p>Kaybolmuş gibi görünüyorsun. Kaybolduğunda ne iyi gider biliyor musun? Bir tabak dolusu sıcak erişte. Otur bakalım. Burada çılgınlar gibi çok lezzetli bir şey pişiriyoruz.</p>
+  <p class="links">
+    Okuyacak bir şey ister misin? Şunlara bakabilirsin:
+    <br><br>
+    <a href="/">Ana Sayfaya Dön</a>
+  </p>
+</div>
+
+</body>
+</html>
